--- a/openldap/map.jinja
+++ b/openldap/map.jinja
@@ -1,97 +1,49 @@
-{% set openldap = salt['grains.filter_by']({
-    'default': {
-        'client_config': '/etc/ldap.conf',
-        'client_pkg': 'openldap',
-        'server_defaults': '/etc/default/slapd',
-        'server_pkg': 'openldap',
-        'service': 'slapd',
-        'database': 'mdb',
-        'su_group': 'root',
-        'index': 'objectClass',
-    },
-    'Debian': {
-        'client_config': '/etc/ldap.conf',
-        'client_pkg': 'ldap-utils',
-        'server_config': '/etc/ldap/slapd.conf',
-        'server_defaults': '/etc/default/slapd',
-        'server_pkg': 'slapd',
-        'database': 'mdb',
-        'service': 'slapd',
-        'slapd_includes': [
-            '/etc/ldap/schema/core.schema',
-            '/etc/ldap/schema/cosine.schema',
-            '/etc/ldap/schema/nis.schema',
-            '/etc/ldap/schema/inetorgperson.schema',
-        ],
-        'slapd_argsfile': '/var/run/slapd/slapd.args',
-        'slapd_directory': '/var/lib/ldap',
-        'slapd_modulepath': '/usr/lib/ldap',
-        'slapd_modules': [
-            'back_hdb',
-            ],
-        'slapd_pidfile': '/var/run/slapd/slapd.pid',
-        'su_group': 'root',
-    },
-    'FreeBSD': {
-        'client_config': '/usr/local/etc/openldap/ldap.conf',
-        'client_pkg': 'openldap-client',
-        'server_config': '/usr/local/etc/openldap/slapd.conf',
-        'server_pkg': 'openldap-server',
-        'service': 'slapd',
-        'slapd_includes': [
-            '/usr/local/etc/openldap/schema/core.schema',
-        ],
-        'slapd_argsfile': '/var/run/openldap/slapd.args',
-        'slapd_directory': '/var/db/openldap-data',
-        'slapd_modulepath': '/usr/local/libexec/openldap',
-        'slapd_modules': [
-            'back_mdb',
-            ],
-        'slapd_pidfile': '/var/run/openldap/slapd.pid',
-        'su_group': 'wheel',
-    },
-    'RedHat': {
-        'client_config': '/etc/openldap/ldap.conf',
-        'client_pkg': 'openldap-clients',
-        'server_config': '/etc/openldap/slapd.conf',
-        'server_pkg': 'openldap-servers',
-        'service': 'slapd',
-        'slapd_includes': [
-            '/etc/openldap/schema/core.schema',
-            '/etc/openldap/schema/cosine.schema',
-            '/etc/openldap/schema/nis.schema',
-            '/etc/openldap/schema/inetorgperson.schema',
-        ],
-        'slapd_argsfile': '/var/run/openldap/slapd.args',
-        'slapd_pidfile': '/var/run/openldap/slapd.pid',
-        'slapd_directory': '/var/lib/ldap',
-        'slapd_modulepath': '/usr/lib64/openldap',
-        'slapd_modules': [
-            'back_mdb',
-            ],
-        'su_group': 'root',
-    },
-    'Suse': {
-        'client_config': '/etc/openldap/ldap.conf',
-        'client_pkg': 'openldap2-client',
-        'server_config': '/etc/openldap/slapd.conf',
-        'server_pkg': 'openldap2',
-        'service': 'slapd',
-        'slapd_includes': [
-            '/etc/openldap/schema/core.schema',
-            '/etc/openldap/schema/cosine.schema',
-            '/etc/openldap/schema/inetorgperson.schema',
-            '/etc/openldap/schema/rfc2307bis.schema',
-            '/etc/openldap/schema/yast.schema',
-         ],
-        'slapd_argsfile': '/var/run/openldap/slapd.args',
-        'slapd_pidfile': '/var/run/openldap/slapd.pid',
-        'slapd_directory': '/var/lib/ldap',
-        'slapd_modulepath': '/usr/lib64/openldap',
-        'slapd_modules': [
-            'back_mdb',
-         ],
-        'slapd_pidfile': '/var/run/slapd/slapd.pid',
-        'su_group': 'root',
-    },
-}, grain='os_family', merge=salt['pillar.get']('openldap:lookup')) %}
+# -*- coding: utf-8 -*-
+# vim: ft=jinja
+
+{#- Get the `tplroot` from `tpldir` #}
+{%- set tplroot = tpldir.split('/')[0] %}
+{#- Start imports as #}
+{%- import_yaml tplroot ~ "/defaults.yaml" as default_settings %}
+{%- import_yaml tplroot ~ "/osarchmap.yaml" as osarchmap %}
+{%- import_yaml tplroot ~ "/osfamilymap.yaml" as osfamilymap %}
+{%- import_yaml tplroot ~ "/osmap.yaml" as osmap %}
+{%- import_yaml tplroot ~ "/osfingermap.yaml" as osfingermap %}
+
+{#- Retrieve the config dict only once #}
+{%- set _config = salt['config.get'](tplroot, default={}) %}
+
+{%- set defaults = salt['grains.filter_by'](
+      default_settings,
+      default=tplroot,
+      merge=salt['grains.filter_by'](
+        osarchmap,
+        grain='osarch',
+        merge=salt['grains.filter_by'](
+          osfamilymap,
+          grain='os_family',
+          merge=salt['grains.filter_by'](
+            osmap,
+            grain='os',
+            merge=salt['grains.filter_by'](
+              osfingermap,
+              grain='osfinger',
+              merge=salt['grains.filter_by'](
+                _config,
+                default='lookup'
+              )
+            )
+          )
+        )
+      )
+    )
+%}
+
+{%- set config = salt['grains.filter_by'](
+      {'defaults': defaults},
+      default='defaults',
+      merge=_config
+    )
+%}
+
+{%- set openldap = config %}
